Set editor startup map to AlteredGravity

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -45,10 +45,10 @@ ManualIPAddress=
 bIsWorldPartitioned=False
 
 [/Script/EngineSettings.GameMapsSettings]
-TransitionMap=/Game/Maps/GravitySuperliminal.GravitySuperliminal
-ServerDefaultMap=/Game/Maps/GravitySuperliminal.GravitySuperliminal
-EditorStartupMap=/Game/Maps/GravitySuperliminal.GravitySuperliminal
-GameDefaultMap=/Game/Maps/GravitySuperliminal.GravitySuperliminal
+TransitionMap=/Game/Maps/AlteredGravity.AlteredGravity
+ServerDefaultMap=/Game/Maps/AlteredGravity.AlteredGravity
+EditorStartupMap=/Game/Maps/AlteredGravity.AlteredGravity
+GameDefaultMap=/Game/Maps/AlteredGravity.AlteredGravity
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
