Add save slot functionality
Saved files are found in Saved/SaveGames folder

--- a/AlteredGravity.uproject
+++ b/AlteredGravity.uproject
@@ -26,6 +26,10 @@
 			"Name": "CustomGravityPlugin",
 			"Enabled": true,
 			"MarketplaceURL": "https://unrealengineresources.com/plugins"
+		},
+		{
+			"Name": "BlueprintFileUtils",
+			"Enabled": true
 		}
 	]
 }
