Add full load game functionality

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -14,6 +14,7 @@ r.ReflectionMethod=1
 
 r.Shadow.Virtual.Enable=1
 r.AllowStaticLighting=True
+r.DefaultFeature.MotionBlur=False
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -49,6 +50,7 @@ TransitionMap=/Game/Maps/AlteredGravity.AlteredGravity
 ServerDefaultMap=/Game/Maps/AlteredGravity.AlteredGravity
 EditorStartupMap=/Game/Maps/AlteredGravity.AlteredGravity
 GameDefaultMap=/Game/Maps/AlteredGravity.AlteredGravity
+GameInstanceClass=/Game/Core/GameInstance/AlteredGravityGameInstance.AlteredGravityGameInstance_C
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
