--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -15,6 +15,8 @@ r.ReflectionMethod=1
 r.Shadow.Virtual.Enable=1
 r.AllowStaticLighting=True
 r.DefaultFeature.MotionBlur=False
+r.AntiAliasingMethod=3
+r.VelocityOutputPass=1
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
