--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -8,7 +8,7 @@ r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 
 r.GenerateMeshDistanceFields=True
 
-r.DynamicGlobalIlluminationMethod=3
+r.DynamicGlobalIlluminationMethod=1
 
 r.ReflectionMethod=1
 
@@ -17,6 +17,9 @@ r.AllowStaticLighting=True
 r.DefaultFeature.MotionBlur=False
 r.AntiAliasingMethod=3
 r.VelocityOutputPass=1
+r.SkinCache.CompileShaders=True
+r.RayTracing=True
+r.Lumen.HardwareRayTracing=True
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
