--- a/AlteredGravity.uproject
+++ b/AlteredGravity.uproject
@@ -30,6 +30,10 @@
 		{
 			"Name": "BlueprintFileUtils",
 			"Enabled": true
+		},
+		{
+			"Name": "StaticMeshEditorModeling",
+			"Enabled": true
 		}
 	]
 }
