Set IllusionCurve as default map

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -51,10 +51,10 @@ ManualIPAddress=
 bIsWorldPartitioned=False
 
 [/Script/EngineSettings.GameMapsSettings]
-TransitionMap=/Game/Maps/AlteredGravity.AlteredGravity
-ServerDefaultMap=/Game/Maps/AlteredGravity.AlteredGravity
-EditorStartupMap=/Game/Maps/AlteredGravity.AlteredGravity
-GameDefaultMap=/Game/Maps/AlteredGravity.AlteredGravity
+TransitionMap=/Game/Maps/IllusionCurve.IllusionCurve
+ServerDefaultMap=/Game/Maps/IllusionCurve.IllusionCurve
+EditorStartupMap=/Game/Maps/IllusionCurve.IllusionCurve
+GameDefaultMap=/Game/Maps/IllusionCurve.IllusionCurve
 GameInstanceClass=/Game/Core/GameInstance/AlteredGravityGameInstance.AlteredGravityGameInstance_C
 
 [/Script/Engine.CollisionProfile]
