--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -51,11 +51,12 @@ ManualIPAddress=
 bIsWorldPartitioned=False
 
 [/Script/EngineSettings.GameMapsSettings]
-TransitionMap=/Game/Maps/IllusionCurve.IllusionCurve
-ServerDefaultMap=/Game/Maps/IllusionCurve.IllusionCurve
+TransitionMap=/Game/Maps/Niagara.Niagara
+ServerDefaultMap=/Game/Maps/Niagara.Niagara
 EditorStartupMap=/Game/Maps/IllusionCurve.IllusionCurve
-GameDefaultMap=/Game/Maps/IllusionCurve.IllusionCurve
+GameDefaultMap=/Game/Maps/Niagara.Niagara
 GameInstanceClass=/Game/Core/GameInstance/AlteredGravityGameInstance.AlteredGravityGameInstance_C
+GlobalDefaultGameMode=/Game/Core/GameModes/GravitySuperliminalGameMode.GravitySuperliminalGameMode_C
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
